--- a/01HTML/index.html
+++ b/01HTML/index.html
@@ -8,9 +8,9 @@
 <title>Mi Band - Mi Global Home</title>
 
 
-<meta property="og:image" content="http://global.mifile.cn/webfile/globalimg/common/wristband/colorhuan.jpg" /><meta property="og:title" content=" Mi Band" /><meta property="og:description" content="Understand your every move. With a military-grade sensor and 30 day battery, Mi Band helps you monitor your activity levels throughout the day and calculates walking distance and calories burned. " /><link href="/favicon.ico" rel="shortcut icon" type="image/x-icon">
-<link rel="stylesheet" type="text/css" href="http://static01.global.mi.com/css/en/en.xm.base.css?B99228a83dda54ba801b0fe6eaeadb68a"/>
-<link rel="stylesheet" type="text/css" href="http://static01.global.mi.com/css/en/en.p.miband.css?Ba2b7239de0b66fcaf3ccace36a6a50bf" />
+<meta property="og:image" content="http://global.mifile.cn/webfile/globalimg/common/wristband/colorhuan.jpg" /><meta property="og:title" content=" Mi Band" /><meta property="og:description" content="Understand your every move. With a military-grade sensor and 30 day battery, Mi Band helps you monitor your activity levels throughout the day and calculates walking distance and calories burned. " /><link href="favicon.ico" rel="shortcut icon" type="image/x-icon">
+<link rel="stylesheet" type="text/css" href="css/style1.css"/>
+<link rel="stylesheet" type="text/css" href="css/style2.css" />
 <script type="text/javascript" src="http://static01.global.mi.com/js/libs/jquery18.js"></script>
 <script type="text/javascript" src="http://static01.global.mi.com/js/en/xm.base.js?B458ba994fb91a295ce52434d1a3af39a"></script>
 <script type="text/javascript">
@@ -679,7 +679,7 @@
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  })(window,document,'script','http://www.google-analytics.com/analytics.js','ga');
 
   ga('create', 'UA-51415204-9', 'mi.com');
   ga('require', 'displayfeatures');
